github repo thing is now git gay

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -124,8 +124,8 @@
         <p><a href="/pages/gallery.html">gallery</a></p>
         <p><a href="/pages/coolmusic.html">cool music</a></p>
         <p>
-          <a href="https://github.com/authenyoo/authens-site-v2" target="_blank"
-            >github repo</a
+          <a href="https://git.gay/authenyo/website" target="_blank"
+            >git repo</a
           >
         </p>
         <p><a href="/pages/music.html">my music</a></p>
