--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -85,6 +85,7 @@
       </div>
       <div class="item" style="order: 1; height: 310.55900621118013vh">
         <h1>gallery</h1>
+        <p>everything here is free to use in every way you want</p>
         <p>
           <img
             src="/images/gallery/0ef74d99-ddfb-40d3-b2ce-9be24b66bc70.png"
@@ -158,6 +159,46 @@
           />
           <img
             src="/images/gallery/IMG_20230922_111021.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="/images/gallery/20230215_224439.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="/images/gallery/20230312_191432.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="/images/gallery/20230426_190539.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="/images/gallery/20230508_152432.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="/images/gallery/20230724_162217.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="/images/gallery/a3c3fce965c4946f9ab7ce7be25e9b0d.png"
+            width="200"
+            height="200"
+          />
+          <img
+            src="/images/gallery/fireee.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="/images/gallery/fucked upp.jpg"
             width="200"
             height="200"
           />
