links page awesome

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -192,16 +192,8 @@
             width="200"
             height="200"
           />
-          <img
-            src="/images/gallery/fireee.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="/images/gallery/fucked upp.jpg"
-            width="200"
-            height="200"
-          />
+          <img src="/images/gallery/fireee.jpg" width="200" height="200" />
+          <img src="/images/gallery/fucked upp.jpg" width="200" height="200" />
         </p>
         <marquee><img src="/images/gallery/3dgifmaker11702.gif" /></marquee>
       </div>
