--- a/pages/links.html
+++ b/pages/links.html
@@ -18,7 +18,6 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
     <meta name="”robots”" content="”noai," noimageai” />
-
     <script type="text/javascript">
       // <![CDATA[
       var speed = 100; // speed of wobbling, lower is faster
@@ -80,63 +79,53 @@
         </marquee>
       </div>
       <div class="item" style="height: 900px">
-        <h1>my links!!!!</h1>
-        <p>
-          <a href="https://wetdry.world/@authenyo">
-            <img
-              src="/images/mastodon.gif"
-              alt="360 Spin of the Mastodon logo. It functions as a hyperlink to my Mastodon profile."
-              width="88"
-              height="31"
-          /></a>
+        <h1>where you can find me</h1>
 
-          <a href="https://www.last.fm/user/pixeIbath">
-            <img
-              src="/images/lastfm.gif"
-              alt="360 Spin of the Lastfm logo. It functions as a hyperlink to my Lastfm profile."
-              width="88"
-              height="31"
-          /></a>
-
-          <a href="https://www.albumoftheyear.org/user/authenyo/">
-            <img
-              src="/images/aoty.gif"
-              alt="360 Spin of the Albumoftheyear logo. It functions as a hyperlink to my Albumoftheyear profile."
-              width="88"
-              height="31"
-          /></a>
-
-          <a href="https://open.spotify.com/user/qfyf9girl07waduer1kkystsg">
-            <img
-              src="/images/spotifyy.gif"
-              alt="360 Spin of the Spotify logo. It functions as a hyperlink to my Spotify profile."
-              width="88"
-              height="31"
-          /></a>
-
-          <a href="https://twitter.com/maybeauthen">
-            <img
-              src="/images/twitterr.gif"
-              width="88"
-              height="31"
-              alt="360 Spin of the Twitter logo. It functions as a hyperlink to my Twitter profile."
-          /></a>
-          <a href="https://ipgrabber.bandcamp.com/">
-            <img
-              src="/images/bandcamp.gif"
-              alt="360 Spin of the Bandcamp logo. It functions as a hyperlink to my Bandcamp profile."
-              width="88"
-              height="31"
-          /></a>
-          <a href="mailto:authen@authenyo.xyz">
-            <img
-              src="/images/email.gif"
-              alt="360 Spin of a Envelope. It functions as a hyperlink to e-mail me."
-              width="88"
-              height="31"
-            />
-          </a>
-        </p>
+        <div class="item2" style="width: 500px; height: 400px; margin: auto">
+          <p>
+            mastodon:
+            <a href="https://wetdry.world/@authenyo">authenyo@wetdry.world</a>
+          </p>
+          <p>
+            sharkey:
+            <a href="https://eepy.zone/@authenyo">authenyo@eepy.zone</a>
+          </p>
+          <p>
+            akkoma:
+            <a href="https://soc.noob.quest/authenyo"
+              >authenyo@soc.noob.quest</a
+            >
+          </p>
+          <p>
+            lastfm: <a href="https://www.last.fm/user/pixeIbath">pixeIbath</a>
+          </p>
+          <p>
+            aoty:
+            <a href="https://www.albumoftheyear.org/user/authenyo/">authenyo</a>
+          </p>
+          <p>
+            spotify (user):
+            <a href="https://open.spotify.com/user/qfyf9girl07waduer1kkystsg"
+              >authenyo</a
+            >
+          </p>
+          <p>
+            spotify (artist):
+            <a href="https://open.spotify.com/artist/7cvtiqon1MXgdhPnOvKlpl"
+              >authenyo</a
+            >
+          </p>
+          <p>
+            twitter: <a href="https://twitter.com/maybeauthen">maybeauthen</a>
+          </p>
+          <p>
+            bandcamp:
+            <a href="https://ipgrabber.bandcamp.com">ipgrabber.bandcamp.com</a>
+          </p>
+          <p>
+            e-mail: <a href="mailto:authen@authenyo.xyz">authen@authenyo.xyz</a>
+          </p>
+        </div>
       </div>
 
       <div class="item2" style="height: 900px">
