--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -330,71 +330,110 @@ authen's website. very cool!
         <div class="borderthing" style="width: 97%">
           <p>polls</p>
         </div>
-        <form method="post" action="https://poll.pollcode.com/58434724">
-          <div
-            style="
+        <form
+          method="post"
+          action="https://poll.pollcode.com/84215862"
+          style=""
+        >
+        <div style="
               background-color: #222426;
               padding: 2px;
-              width: 98.5%;
+              width: 98.4%;
               font-family: Arial;
               font-size: small;
               color: #ffffff;
               text-align: left;
               overflow-wrap: break-word;
-            "
-          >
-            <div style="padding: 2px 0px 4px 2px">
-              <strong>best rap album of the year?</strong>
+            " bis_skin_checked="1">
+            <div style="padding: 2px 0px 4px 2px" bis_skin_checked="1">
+              <strong>which one is your favorite</strong>
             </div>
             <input
               type="radio"
               name="answer"
               value="1"
-              id="answer584347241"
-              style="float: left"
-            /><label for="answer584347241" style="float: left; width: 150px"
-              >JPEGMAFIA & Danny Brown - SCARING THE HOES</label
+              id="answer1"
+              style="float: left; margin: 3px"
+            /><label for="answer1" style="float: left; width: 150px"
+              >hubby wubby</label
             >
-            <div style="clear: both; height: 2px"></div>
+            <div style="clear: both; height: 2px" bis_skin_checked="1"></div>
             <input
               type="radio"
               name="answer"
               value="2"
-              id="answer584347242"
-              style="float: left"
-            /><label for="answer584347242" style="float: left; width: 150px"
-              >billy woods & Kenny Segal - Maps</label
+              id="answer2"
+              style="float: left; margin: 3px"
+            /><label for="answer2" style="float: left; width: 150px"
+              >seek</label
             >
-            <div style="clear: both; height: 2px"></div>
+            <div style="clear: both; height: 2px" bis_skin_checked="1"></div>
             <input
               type="radio"
               name="answer"
               value="3"
-              id="answer584347243"
-              style="float: left"
-            /><label for="answer584347243" style="float: left; width: 150px"
-              >Earl Sweatshirt & The Alchemist - Voir Dire</label
+              id="answer3"
+              style="float: left; margin: 3px"
+            /><label for="answer3" style="float: left; width: 150px"
+              >scary blue</label
             >
-            <div style="clear: both; height: 2px"></div>
+            <div style="clear: both; height: 2px" bis_skin_checked="1"></div>
             <input
               type="radio"
               name="answer"
               value="4"
-              id="answer584347244"
-              style="float: left"
-            /><label for="answer584347244" style="float: left; width: 150px"
-              >Travis Scott - UTOPIA</label
+              id="answer4"
+              style="float: left; margin: 3px"
+            /><label for="answer4" style="float: left; width: 150px"
+              >jumbo josh</label
             >
-            <div style="clear: both; height: 2px"></div>
-            <div align="center" style="padding: 3px">
+            <div style="clear: both; height: 2px" bis_skin_checked="1"></div>
+            <input
+              type="radio"
+              name="answer"
+              value="5"
+              id="answer5"
+              style="float: left; margin: 3px"
+            /><label for="answer5" style="float: left; width: 150px"
+              >banban</label
+            >
+            <div style="clear: both; height: 2px" bis_skin_checked="1"></div>
+            <input
+              type="radio"
+              name="answer"
+              value="6"
+              id="answer6"
+              style="float: left; margin: 3px"
+            /><label for="answer6" style="float: left; width: 150px"
+              >nabnab</label
+            >
+            <div style="clear: both; height: 2px" bis_skin_checked="1"></div>
+            <input
+              type="radio"
+              name="answer"
+              value="7"
+              id="answer7"
+              style="float: left; margin: 3px"
+            /><label for="answer7" style="float: left; width: 150px"
+              >frog dude</label
+            >
+            <div style="clear: both; height: 2px" bis_skin_checked="1"></div>
+            <input
+              type="radio"
+              name="answer"
+              value="8"
+              id="answer8"
+              style="float: left; margin: 3px"
+            /><label for="answer8" style="float: left; width: 150px"
+              >slow seline</label
+            >
+            <div style="clear: both; height: 2px" bis_skin_checked="1"></div>
+            <div align="center" style="padding: 3px" bis_skin_checked="1">
               <input type="submit" value=" Vote " />&nbsp;<input
                 type="submit"
                 name="view"
                 value=" View "
               />
-            </div>
-            <div align="right" style="font-size: 10px">
-              pollcode.com <a href="https://pollcode.com/">free polls</a>
             </div>
           </div>
         </form>
