--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -82,58 +82,100 @@
         <h1>about me</h1>
         <p>i'm a very silly goober that you may find on the internet.</p>
 
-<p>i am brazillian, bisexual, black and i use he/they pronouns</p>
+        <p>i am brazillian, bisexual, black and i use he/they pronouns</p>
 
-<p>i like music, a lot. one of my favorite genres is rap, generally the more underground part of it. 
-i had a huge digicore phase and still listen to a lot of it today (quinn is my most played artist of all time, with over 2 thousand plays), 
-some of my favorites are quinn, twikipedia, jane remover (specially her dariacore stuff) and ericdoa.
-i also like nettspend and smokingskul a lot.</p>
+        <p>
+          i like music, a lot. one of my favorite genres is rap, generally the
+          more underground part of it. i had a huge digicore phase and still
+          listen to a lot of it today (quinn is my most played artist of all
+          time, with over 2 thousand plays), some of my favorites are quinn,
+          twikipedia, jane remover (specially her dariacore stuff) and ericdoa.
+          i also like nettspend and smokingskul a lot.
+        </p>
 
-<p>recently i've been listening to a lot of dean blunt,
-he usually does hypnagogic pop, art pop and experimental rock n stuff.
-one thing i like about dean a lot is that he can be very experimental but without being extremely chaotic and loud (even in his noise stuff)</p>
+        <p>
+          recently i've been listening to a lot of dean blunt, he usually does
+          hypnagogic pop, art pop and experimental rock n stuff. one thing i
+          like about dean a lot is that he can be very experimental but without
+          being extremely chaotic and loud (even in his noise stuff)
+        </p>
 
-<p>some of my favorite albums of all time are clube da esquina by milton nascimento, 
-twin fantasy (mirror to mirror) by car seat headrest,
-self-titled by arthur verocai,
-daughter of darkness by natural snow buildings (the reissue) and prelude au sommeil by jean-jacques perrey.</p>
+        <p>
+          some of my favorite albums of all time are clube da esquina by milton
+          nascimento, twin fantasy (mirror to mirror) by car seat headrest,
+          self-titled by arthur verocai, daughter of darkness by natural snow
+          buildings (the reissue) and prelude au sommeil by jean-jacques perrey.
+        </p>
 
-<p>i've been also trying to get into black metal, specially atmospheric and blackgaze.
-i think the EP demo three by life/sadness/Damián Antón Ojeda is a 10/10.
-send me recommendations on <a href="https://www.albumoftheyear.org/user/authenyo/">albumoftheyear</a> if you got some</p>
+        <p>
+          i've been also trying to get into black metal, specially atmospheric
+          and blackgaze. i think the EP demo three by life/sadness/Damián Antón
+          Ojeda is a 10/10. send me recommendations on
+          <a href="https://www.albumoftheyear.org/user/authenyo/"
+            >albumoftheyear</a
+          >
+          if you got some
+        </p>
 
-<p>mentioned earlier, i absolutely love dariacore. 
-i think the obsessed post-frailty mix is one of the best dj mixes of all time and a 10/10
-it is so chaotic and i love it so much for that.
-</p>
+        <p>
+          mentioned earlier, i absolutely love dariacore. i think the obsessed
+          post-frailty mix is one of the best dj mixes of all time and a 10/10
+          it is so chaotic and i love it so much for that.
+        </p>
 
-<p>personally, i like open source, but not in the way "i hate non-free software grrr"
-i mostly use open source when its convenient.
-i use linux because it's lightweight (without installing random isos and deleting windows defender) and i dont need to crack it 
-i much prefer using a open source alternative than using software with free trials and a billion ads.</p>
+        <p>
+          personally, i like open source, but not in the way "i hate non-free
+          software grrr" i mostly use open source when its convenient. i use
+          linux because it's lightweight (without installing random isos and
+          deleting windows defender) and i dont need to crack it i much prefer
+          using a open source alternative than using software with free trials
+          and a billion ads.
+        </p>
 
-<p>i think piracy is #awesome. 
-hrrrr i  will take  ya treasures ya matey i just downloaded 5 yabujin albums on soulseek and torrented a copy of Grand Theft Auto: San Andreas</p>
+        <p>
+          i think piracy is #awesome. hrrrr i will take ya treasures ya matey i
+          just downloaded 5 yabujin albums on soulseek and torrented a copy of
+          Grand Theft Auto: San Andreas
+        </p>
 
-<p>i have an good amount of brainrot.
-a victorian child could explode with half of the things related to me on the internet.</p>
+        <p>
+          i have an good amount of brainrot. a victorian child could explode
+          with half of the things related to me on the internet.
+        </p>
 
-<p>talking about this website, 
-it is written 100% in pure raw html and css and all the javascript is pretty simple (and also not mine lol theyre just funny effects)</p>
+        <p>
+          talking about this website, it is written 100% in pure raw html and
+          css and all the javascript is pretty simple (and also not mine lol
+          theyre just funny effects)
+        </p>
 
-<p>you can find on this website:
-<p>this thing you're reading (about me)</p>
-<p><a href="/pages/links.html">links</a> to all my social media and stuff</p>
-<p><a href="/blog/index.html">blog</a> that i post in every 56 years</p>
-<p><a href="/pages/gallery.html">gallery</a> of cool pictures i took (mostly of my cat)</p>
-<p>music recommendations from the man himself in <a href="/pages/coolmusic.html">cool</a> music</p>
-<p>the <a href="music.html">awful and okay</a> novelty music from authentication yo</p>
-</p>
+        <p>you can find on this website:</p>
+        <p>this thing you're reading (about me)</p>
+        <p>
+          <a href="/pages/links.html">links</a> to all my social media and stuff
+        </p>
+        <p><a href="/blog/index.html">blog</a> that i post in every 56 years</p>
+        <p>
+          <a href="/pages/gallery.html">gallery</a> of cool pictures i took
+          (mostly of my cat)
+        </p>
+        <p>
+          music recommendations from the man himself in
+          <a href="/pages/coolmusic.html">cool</a> music
+        </p>
+        <p>
+          the <a href="music.html">awful and okay</a> novelty music from
+          authentication yo
+        </p>
 
-<p>i love tony zaret  he is awesome i love when big chungus drinks all my horse milk
-i also lvoe isaacwhy and all the group chat fellas and yes larry is the best member of the group chat and yes he is the first bisexual mexican ever</p>
+        <p>
+          i love tony zaret he is awesome i love when big chungus drinks all my
+          horse milk i also lvoe isaacwhy and all the group chat fellas and yes
+          larry is the best member of the group chat and yes he is the first
+          bisexual mexican ever
+        </p>
 
-<p>tl;dr uhh im awesome n stuff</p>
+        <p>tl;dr uhh im awesome n stuff</p>
         <img src="/images/worldisa.png" />
       </div>
       <div class="item2" style="height: 1500px">
