idk man somethin

--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -114,12 +114,13 @@ authen's website. very cool!
     </script>
   </head>
   <body>
+    <script src="./oneko.js"></script>
     <!-- script tag for the mouse effects 2 -->
     <script type="module">
       import { fairyDustCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
 
       new fairyDustCursor();
-    </script>
+    </script>   
     <!--- basic flexbox stuff -->
     <div class="flex">
       <div class="header">
