--- a/pages/music.html
+++ b/pages/music.html
@@ -126,6 +126,33 @@ authen's website. very cool!
       </div>
       <div class="item" style="order: 1; height: 1200px">
         <div class="projectflex">
+        <div class="project">
+            <img
+              src="/images/covers/thetrialofthomasburrows.png"
+              width="100"
+              height="100"
+            />
+            <p>
+              <a href="https://ipgrabber.bandcamp.com/album/the-trial-of-thomas-burrows"
+                >The Trial of Thomas Burrows</a
+              >
+            </p>
+          </div>
+
+          <div class="project">
+            <img
+              src="/images/covers/authensmoulder25.png"
+              width="100"
+              height="100"
+            />
+            <p>
+              <a href="https://album.link/authensmoulder2point5"
+                >AUTHENSMOULDER 2.5
+              </a>
+            </p>
+          </div>
+
+        
           <div class="project">
             <img
               src="/images/covers/itsureisnice.jpg"
