buttons, remove the trial of thomas burrows because that album is corny, add ishowskibidi album

--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -179,7 +179,7 @@ authen's website. very cool!
           /></a>
           <a href="https://ikaroll.neocities.org/" target="_blank"
             ><img
-              src="https://ikaroll.neocities.org/assets/homepage/stamps/site_stamps/site_stamp2.gif"
+              src="/images/ikav2button.gif"
           /></a>
           <a href="https://zj.neocities.org" target="_blank"
             ><img src="https://zj.neocities.org/gifs/zj's%20pingu%20button.png"
@@ -281,9 +281,20 @@ authen's website. very cool!
           <a href="https://garf.neocities.org/"
             ><img src="https://garf.neocities.org/garf.gif"
           /></a>
-          <a href="https://waterbottlebong.neocities.org/" target="_blank">
-            he does not have a 88x31 but dope shit is awesome check him out
-          </a>
+          <a href="https://idkimjustadog.neocities.org/" target="_blank"
+            ><img
+              src="/images/ellietime.png"
+              alt="ellie"
+              width="88"
+              height="31"
+          /></a>
+          <a href="https://houl.floof.company/" target="_blank"
+            ><img
+              src="/images/button.png"
+              alt="houl"
+              width="88"
+              height="31"
+          /></a>
         </marquee>
         <!-- button thing -->
         <p style="margin: 40px">use my button</p>
