update after one fuckin year, way too many changes

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ authen's website. very cool!
       content="-7LhtnT_LlMv8cDYlVMUvo8NvkueZUl5oEg-qA9YOtA"
     />
     <meta name="”robots”" content="”noai," noimageai” />
+    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
   </head>
   <body>
     <!-- script tag for the mouse effects 2 -->
@@ -77,21 +78,22 @@ authen's website. very cool!
     </div>
   </div>
   <div class="window-body has-space">
-      <img src="/images/gallery/20230724_162217.jpg" width="200" height="200" align="left" style="margin: 5px">
+      <img src="/images/gallery/20230724_162217.jpg" width="200" height="200" style="margin: 5px; float: left" alt="blurry picture of my cat">
       <p>some things:</p>
       <p>
-        mobile isnt supported at all and not recommended, best viewed on a
-        desktop.
+        mobile isnt supported at all and not recommended Get on the computer
       </p>
       <p>
         any modern browsers should work fine, except the ones that dont support
-        marquees (like stable mypal)
+        marquees (like stable mypal (who uses stable mypal))
       </p>
       <p>
-        this website has a lot of deprecated tags (for the 2000s ish aesthetic)
+        this website has a lot of deprecated tags (because its fun and cool)
       </p>
-      <p>also if possible enable javascript</p>
+      <p>also if possible enable javascript its not like unusable but it looks cooler</p>
+      <p><a href="https://authenyo-xyz.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en-US&_x_tr_pto=wapp">translated version</a></p>
       <button><a href="/pages/happiness.html" style="color: #000000">enter</a></button>
+      <p style="display: none;"><a href="https://mk.noob.quest/@authen">balls</a></p>
   </div>
 </div>
   </body>
