--- a/not_found.html
+++ b/not_found.html
@@ -17,6 +17,9 @@
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
   </head>
   <body>
-    <marquee><img src="/images/404.jpg" /></marquee>
+    <marquee><iframe width="560" height="315" src="https://www.youtube.com/embed/2ByUkVOkF6c?si=4Ckr7Kumg_nwmtdM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></marquee>
+    <h1>404... sowwy</h1>
+    <p>take this cool wildkarduno song</p>
+    <p><a href="/pages/happiness.html">go back!! now</a></p>
   </body>
 </html>
