--- a/pages/coolmusic.html
+++ b/pages/coolmusic.html
@@ -80,96 +80,7 @@
       </div>
       <div class="item" style="height: 1900px">
         <p>cool music that i like and you should listen to it</p>
-        <p>
-          <a
-            href="https://open.spotify.com/album/3GvkNpMnXI9Kghl3mO0bqB"
-            target="_blank"
-          >
-            <img
-              src="/images/peeve.jpg"
-              alt="TRURELIGION by peeve, the future of music"
-              width="20%"
-              height="20%"
-            />
-          </a>
-          <a
-            href="https://open.spotify.com/album/5risYG7klZCSLMNxB9dZhf"
-            target="_blank"
-          >
-            <img
-              src="/images/milton.jpg"
-              alt="Clube da Esquina by Milton Nascimento"
-              width="20%"
-              height="20%"
-            />
-          </a>
-          <a
-            href="https://open.spotify.com/album/7efViNi9BwV3o9TcK4IcVR"
-            target="_blank"
-          >
-            <img
-              src="/images/ilysm.jpg"
-              alt="no matter how i look at it .. by ilysm"
-              width="20%"
-              height="20%"
-            />
-          </a>
-          <a
-            href="https://open.spotify.com/album/24i2X6WHCessCxxZGP8eJW"
-            target="_blank"
-          >
-            <img
-              src="/images/debut.jpeg"
-              alt="debut by heavensouls"
-              width="20%"
-              height="20%"
-            />
-          </a>
-          <a
-            href="https://open.spotify.com/album/7axF99v0pP2oBj5RxAWgrv"
-            target="_blank"
-          >
-            <img
-              src="/images/fenton.jpg"
-              alt="Somebody Loan Me A Dime by Fenton Robinson"
-              width="20%"
-              height="20%"
-            />
-          </a>
-          <a
-            href="https://soundcloud.com/twerknation28/sets/season-8"
-            target="_blank"
-          >
-            <img
-              src="/images/twerknation28.jpg"
-              alt="season 8 by TwerkNation28"
-              width="20%"
-              height="20%"
-            />
-          </a>
-          <a
-            href="https://open.spotify.com/album/6pLL6zz2kgDSKHA8mNiPDn"
-            target="_blank"
-          >
-            <img
-              src="/images/melancholia.jpg"
-              alt="melancholia blue by melancholia blue"
-              width="20%"
-              height="20%"
-            />
-          </a>
-          <a
-            href="https://open.spotify.com/album/4X3TbSXKD3OMtFuDMjmWkJ"
-            target="_blank"
-          >
-            <img
-              src="/images/ozzglorious.jpg"
-              alt="bitch im ozzglorious by drake cone"
-              width="20%"
-              height="20%"
-            />
-          </a>
-        </p>
+       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3FWCvzduYZg?si=zIXhfRwd03Y8Uu7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
 
       <div class="item2" style="height: 1900px">
@@ -179,11 +90,6 @@
         <p><a href="/pages/happiness.html">home</a></p>
         <p><a href="/pages/aboutme.html">about me</a></p>
         <p><a href="/pages/links.html">links</a></p>
-        <p>
-          <a href="https://authen.123guestbook.com/#" target="_blank"
-            >guestbook</a
-          >
-        </p>
         <p><a href="/blog/index.html">blog</a></p>
         <p><a href="/pages/gallery.html">gallery</a></p>
         <p><a href="/pages/coolmusic.html">cool music</a></p>
@@ -192,7 +98,9 @@
             >git repo</a
           >
         </p>
-        <p><a href="/pages/music.html">my music</a></p>
+        <p><a href="/pages/givememoney.html">donate</a></p>
+        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
+        <p><a href="/pages/services.html">services</a></p>
       </div>
     </div>
   </body>
