--- a/pages/secretpage.html
+++ b/pages/secretpage.html
@@ -6,6 +6,7 @@
     <title>The web site of authen</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
     <meta name="”robots”" content="”noai," noimageai” />
+    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
   </head>
   <body>
     <style>
