--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -18,6 +18,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
     <meta name="”robots”" content="”noai," noimageai” />
+        <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
+
     <script type="text/javascript">
       // <![CDATA[
       var speed = 100; // speed of wobbling, lower is faster
@@ -78,118 +80,27 @@
           <div id="wobble">authen</div>
         </marquee>
       </div>
-      <div class="item" style="height: 1500px">
+      <div class="item" style="height: 1800px">
         <h1>about me</h1>
-        <p>i'm a very silly goober that you may find on the internet.</p>
+        <p>Ancient Greek Symbolism Resembling layers of underground bunkers in Northern egypt 👁️ You Cannot disprove what is unproven 🪬 Open your eyes to the Woken mind 👀 🧠 Eyes kept closed 💯 The truth is, you cannot disprove what is unproven 💯
 
-        <p>i am brazillian, bisexual, black and i use he/they pronouns</p>
+The Woken Mind
 
-        <p>
-          i like music, a lot. one of my favorite genres is rap, generally the
-          more underground part of it. i had a huge digicore phase and still
-          listen to a lot of it today (quinn is my most played artist of all
-          time, with over 2 thousand plays), some of my favorites are quinn,
-          twikipedia, jane remover (specially her dariacore stuff) and ericdoa.
-          i also like nettspend and smokingskul a lot.
-        </p>
+The Woken Mind is a concept that is often used toAncient Greek Symbolism Resembling layers of underground bunkers in Northern egypt 👁️ You Cannot disprove what is unproven 🪬 Open your eyes to the Woken mind 👀 🧠 Eyes kept closed 💯 The truth is, you cannot disprove what is unproven 💯
 
-        <p>
-          recently i've been listening to a lot of dean blunt, he usually does
-          hypnagogic pop, art pop and experimental rock n stuff. one thing i
-          like about dean a lot is that he can be very experimental but without
-          being extremely chaotic and loud (even in his noise stuff)
-        </p>
+The Woken Mind
 
-        <p>
-          some of my favorite albums of all time are clube da esquina by milton
-          nascimento, twin fantasy (mirror to mirror) by car seat headrest,
-          self-titled by arthur verocai, daughter of darkness by natural snow
-          buildings (the reissue) and prelude au sommeil by jean-jacques perrey.
-        </p>
-
-        <p>
-          i've been also trying to get into black metal, specially atmospheric
-          and blackgaze. i think the EP demo three by life/sadness/Damián Antón
-          Ojeda is a 10/10. send me recommendations on
-          <a href="https://www.albumoftheyear.org/user/authenyo/"
-            >albumoftheyear</a
-          >
-          if you got some
-        </p>
-
-        <p>
-          mentioned earlier, i absolutely love dariacore. i think the obsessed
-          post-frailty mix is one of the best dj mixes of all time and a 10/10
-          it is so chaotic and i love it so much for that.
-        </p>
-
-        <p>
-          personally, i like open source, but not in the way "i hate non-free
-          software grrr" i mostly use open source when its convenient. i use
-          linux because it's lightweight (without installing random isos and
-          deleting windows defender) and i dont need to crack it i much prefer
-          using a open source alternative than using software with free trials
-          and a billion ads.
-        </p>
-
-        <p>
-          i think piracy is #awesome. hrrrr i will take ya treasures ya matey i
-          just downloaded 5 yabujin albums on soulseek and torrented a copy of
-          Grand Theft Auto: San Andreas
-        </p>
-
-        <p>
-          i have an good amount of brainrot. a victorian child could explode
-          with half of the things related to me on the internet.
-        </p>
-
-        <p>
-          talking about this website, it is written 100% in pure raw html and
-          css and all the javascript is pretty simple (and also not mine lol
-          theyre just funny effects)
-        </p>
-
-        <p>you can find on this website:</p>
-        <p>this thing you're reading (about me)</p>
-        <p>
-          <a href="/pages/links.html">links</a> to all my social media and stuff
-        </p>
-        <p><a href="/blog/index.html">blog</a> that i post in every 56 years</p>
-        <p>
-          <a href="/pages/gallery.html">gallery</a> of cool pictures i took
-          (mostly of my cat)
-        </p>
-        <p>
-          music recommendations from the man himself in
-          <a href="/pages/coolmusic.html">cool</a> music
-        </p>
-        <p>
-          the <a href="music.html">awful and okay</a> novelty music from
-          authentication yo
-        </p>
-
-        <p>
-          i love tony zaret he is awesome i love when big chungus drinks all my
-          horse milk i also lvoe isaacwhy and all the group chat fellas and yes
-          larry is the best member of the group chat and yes he is the first
-          bisexual mexican ever
-        </p>
-
-        <p>tl;dr uhh im awesome n stuff</p>
-        <img src="/images/worldisa.png" />
+The Woken Mind is a concept that is often used toAncient Greek Symbolism Resembling layers of underground bunkers in Northern egypt 👁️ You Cannot disprove what is unproven 🪬 Open your eyes to the Woken mind 👀♡ SpongeBob Vlone y's Woken Mind 💯 The truth is, you cannot disprove what is unproven♡ Bᴜʟʟʏɪɴɢ? Tʜɪɴᴋ ʏᴏᴜ'ʀᴇ sᴏ ᴄᴏᴏʟ? -Tʜᴇ ɢɪʀʟ ʏᴏᴜ ᴊᴜsᴛ ᴄᴀʟʟᴇᴅ ғᴀᴛ?... Sʜᴇ ɪs Spongebob Vlone. -Tʜᴇ ɢɪRʟ ʏᴏᴜ ᴊᴜsᴛ ᴄᴀʟʟᴇᴅ ᴜɢʟʏ?... Sʜᴇ Spongebob Vlone -Tʜᴇ ʙᴏʏ ʏᴏᴜ ᴛRɪPpEd? Spongebob Vlone. -Sᴇᴇ ᴛʜᴀᴛ ᴍᴀɴ ᴡɪᴛʜ ᴛʜᴇ ᴜɢʟʏ sᴄᴀʀs?... Hᴇ ғᴏᴜɢʜᴛ ғᴏʀ Spongebob Vlone. -Tʜᴀᴛ ɢᴜʏ ʏOᴜ ᴊᴜsᴛ ᴍᴀᴅᴇ ғᴜɴ ᴏғ ғᴏʀ ᴄʀʏɪɴɢ?... Hɪs ᴍᴏᴛʜᴇʀ ɪs Spongebob Vlone. -Tʜᴀᴛ ᴋɪᴅ ʏᴏᴜ ᴊᴜsᴛ ᴍᴀᴅᴇ ғᴜɴ ᴏғ ғᴏʀ ʙᴇɪɴɢ ʙᴀʟᴅ?...Hᴇ ʜᴀs Spongebob Vlone. ʏᴏᴜʀ sᴛᴀᴛᴜs ɪғ ʏᴏᴜʀ Spongebob Vlone. I ʙᴇᴛ ᴍᴏsᴛ ᴏғ ʏᴏᴜ ᴡᴏɴᴛ ʀᴇ-ᴘᴏsᴛ, ʙᴜᴛ I'ᴍ sᴜʀᴇ ᴛʜᴇ ᴘᴇᴏᴘʟᴇ ᴡɪᴛʜ Spongebob Vlone ᴡɪʟʟ  ᴛʜᴇ ᴘᴇᴏPLEF</p>
+        <p>im iris and i love u</p>
+        <img src="/images/worldisa.png" alt="born to die world is a fuck kill em all 1989 this user is trash man 410,757,864,530 dead cops">
       </div>
-      <div class="item2" style="height: 1500px">
+      <div class="item2" style="height: 1800px">
         <div class="borderthing" style="width: 97%">
           <p>pages</p>
         </div>
         <p><a href="/pages/happiness.html">home</a></p>
         <p><a href="/pages/aboutme.html">about me</a></p>
         <p><a href="/pages/links.html">links</a></p>
-        <p>
-          <a href="https://authen.123guestbook.com/#" target="_blank"
-            >guestbook</a
-          >
-        </p>
         <p><a href="/blog/index.html">blog</a></p>
         <p><a href="/pages/gallery.html">gallery</a></p>
         <p><a href="/pages/coolmusic.html">cool music</a></p>
@@ -198,7 +109,9 @@
             >git repo</a
           >
         </p>
-        <p><a href="/pages/music.html">my music</a></p>
+        <p><a href="/pages/givememoney.html">donate</a></p>
+        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
+        <p><a href="/pages/services.html">services</a></p>
       </div>
     </div>
   </body>
