--- a/pages/evilshop.html
+++ b/pages/evilshop.html
@@ -18,6 +18,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
     <meta name="”robots”" content="”noai," noimageai” />
+        <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
+
     <script type="text/javascript">
       // <![CDATA[
       var speed = 100; // speed of wobbling, lower is faster
@@ -107,11 +109,6 @@
         <p><a href="/pages/happiness.html">home</a></p>
         <p><a href="/pages/aboutme.html">about me</a></p>
         <p><a href="/pages/links.html">links</a></p>
-        <p>
-          <a href="https://authen.123guestbook.com/#" target="_blank"
-            >guestbook</a
-          >
-        </p>
         <p><a href="/blog/index.html">blog</a></p>
         <p><a href="/pages/gallery.html">gallery</a></p>
         <p><a href="/pages/coolmusic.html">cool music</a></p>
@@ -120,7 +117,9 @@
             >git repo</a
           >
         </p>
-        <p><a href="/pages/music.html">my music</a></p>
+        <p><a href="/pages/givememoney.html">donate</a></p>
+        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
+        <p><a href="/pages/services.html">services</a></p>
       </div>
     </div>
   </body>
