--- a/pages/freemoney.html
+++ b/pages/freemoney.html
@@ -17,6 +17,7 @@
     <meta content="/images/moneyman.jpeg" property="og:image" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
+    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
     <script type="text/javascript">
           <meta name=”robots” content=”noai, noimageai”>
       // <![CDATA[
@@ -89,20 +90,17 @@
         <p><a href="/pages/happiness.html">home</a></p>
         <p><a href="/pages/aboutme.html">about me</a></p>
         <p><a href="/pages/links.html">links</a></p>
-        <p>
-          <a href="https://authen.123guestbook.com/#" target="_blank"
-            >guestbook</a
-          >
-        </p>
         <p><a href="/blog/index.html">blog</a></p>
         <p><a href="/pages/gallery.html">gallery</a></p>
         <p><a href="/pages/coolmusic.html">cool music</a></p>
         <p>
-          <a href="https://github.com/authenyoo/authens-site-v2" target="_blank"
-            >github repo</a
+          <a href="https://git.gay/authenyo/website" target="_blank"
+            >git repo</a
           >
         </p>
-        <p><a href="/pages/music.html">my music</a></p>
+        <p><a href="/pages/givememoney.html">donate</a></p>
+        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
+        <p><a href="/pages/services.html">services</a></p>
       </div>
     </div>
   </body>
