--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -21,6 +21,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#33FFFF" data-react-helmet="true" name="theme-color" />
     <meta name="”robots”" content="”noai," noimageai” />
+    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
     <script type="text/javascript">
       // <![CDATA[
       var speed = 100; // speed of wobbling, lower is faster
@@ -85,7 +86,7 @@
       </div>
       <div class="item" style="order: 1; height: 310.55900621118013vh">
         <h1>gallery</h1>
-        <p>everything here is free to use in every way you want</p>
+        <p>everything here is licensed in <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
         <p>
           <img
             src="/images/gallery/0ef74d99-ddfb-40d3-b2ce-9be24b66bc70.png"
@@ -194,6 +195,11 @@
           />
           <img src="/images/gallery/fireee.jpg" width="200" height="200" />
           <img src="/images/gallery/fucked upp.jpg" width="200" height="200" />
+          <img
+            src="/images/gallery/gnarpy.png"
+            width="200"
+            height="200"
+          />
         </p>
         <marquee><img src="/images/gallery/3dgifmaker11702.gif" /></marquee>
       </div>
@@ -205,11 +211,6 @@
         <p><a href="/pages/happiness.html">home</a></p>
         <p><a href="/pages/aboutme.html">about me</a></p>
         <p><a href="/pages/links.html">links</a></p>
-        <p>
-          <a href="https://authen.123guestbook.com/#" target="_blank"
-            >guestbook</a
-          >
-        </p>
         <p><a href="/blog/index.html">blog</a></p>
         <p><a href="/pages/gallery.html">gallery</a></p>
         <p><a href="/pages/coolmusic.html">cool music</a></p>
@@ -218,7 +219,9 @@
             >git repo</a
           >
         </p>
-        <p><a href="/pages/music.html">my music</a></p>
+        <p><a href="/pages/givememoney.html">donate</a></p>
+        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
+        <p><a href="/pages/services.html">services</a></p>
       </div>
     </div>
   </body>
