--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -41,8 +41,6 @@ authen's website. very cool!
     <title>authenyo's website: for all your authen and authenyo needs</title>
     <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css" />
-    <!-- script tag for the mouse effects -->
-    <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
     <!--- embed meta tags for sites like twitter and discord -->
     <meta content="authen's site" property="og:title" />
     <meta
@@ -53,74 +51,11 @@ authen's website. very cool!
     <meta content="/images/screenie.png" property="og:image" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#33FFFF" data-react-helmet="true" name="theme-color" />
-    <meta name="”robots”" content="”noai," noimageai” />
-    <script
-      type="text/javascript"
-      src="https://www.mellodoot.com/js/pridetriangle.js"
-      defer
-    ></script>
-    <!-- in case this goes down, try the below example! -->
-    <script
-      type="text/javascript"
-      src="https://github.com/mellodoot/prideflag/blob/main/prideflag.js"
-      defer
-    ></script>
-    <script type="text/javascript">
-      // <![CDATA[
-      var speed = 100; // speed of wobbling, lower is faster
-      var height = 3; // height of wobbling in pixels
-      var alink = ""; // page to link text to (set to ="" for no link)
-
-      /****************************
-       *    Wobbly Text Effect     *
-       *(c) 2003-6 mf2fm web-design*
-       *  http://www.mf2fm.com/rv  *
-       * DON'T EDIT BELOW THIS BOX *
-       ****************************/
-      var wobtxt,
-        wobble,
-        wobcnt = 0;
-      window.onload = function () {
-        if (document.getElementById) {
-          var i, wobli;
-          wobble = document.getElementById("wobble");
-          wobtxt = wobble.firstChild.nodeValue;
-          while (wobble.childNodes.length)
-            wobble.removeChild(wobble.childNodes[0]);
-          for (i = 0; i < wobtxt.length; i++) {
-            wobli = document.createElement("span");
-            wobli.setAttribute("id", "wobb" + i);
-            wobli.style.position = "relative";
-            wobli.appendChild(document.createTextNode(wobtxt.charAt(i)));
-            if (alink) {
-              wobli.style.cursor = "pointer";
-              wobli.onclick = function () {
-                top.location.href = alink;
-              };
-            }
-            wobble.appendChild(wobli);
-          }
-          setInterval("wobbler()", speed);
-        }
-      };
-
-      function wobbler() {
-        for (var i = 0; i < wobtxt.length; i++)
-          document.getElementById("wobb" + i).style.top =
-            Math.round(height * Math.sin(i + wobcnt)) + "px";
-        wobcnt++;
-      }
-      // ]]>
-    </script>
+    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
+  
   </head>
   <body>
-    <script src="./oneko.js"></script>
-    <!-- script tag for the mouse effects 2 -->
-    <script type="module">
-      import { fairyDustCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
 
-      new fairyDustCursor();
-    </script>   
     <!--- basic flexbox stuff -->
     <div class="flex">
       <div class="header">
@@ -128,44 +63,25 @@ authen's website. very cool!
           <div id="wobble">authen</div>
         </marquee>
       </div>
-      <div class="banner">
-        <p style="margin: 5px">mcdonald burger</p>
-      </div>
-      <div class="item" style="order: 1; height: 1300px">
-        <h1>welcome!</h1>
+      <div class="item" style="order: 1; height: 1400px">
+        <h1>welcome</h1>
         <p>
-          welcome to my site! im authen (he/they)!! i made this website to
-          gather all my links and cool things i want to do! i love music and
-          tech (i use linux btw btw btw). follow me on
-          <a href="https://neocities.org/site/authen">neocities</a> btw
-        </p>
-        <p>click home if audio doesnt work or allow autoplay</p>
+          ♡ Bᴜʟʟʏɪɴɢ? Tʜɪɴᴋ ʏᴏᴜ'ʀᴇ sᴏ ᴄᴏᴏʟ? -Tʜᴇ ɢɪʀʟ ʏᴏᴜ ᴊᴜsᴛ ᴄᴀʟʟᴇᴅ ғᴀᴛ?... Sʜᴇ ɪs Spongebob Vlone. -Tʜᴇ ɢɪRʟ ʏᴏᴜ ᴊᴜsᴛ ᴄᴀʟʟᴇᴅ ᴜɢʟʏ?... Sʜᴇ Spongebob Vlone -Tʜᴇ ʙᴏʏ ʏᴏᴜ ᴛRɪPpEd? Spongebob Vlone. -Sᴇᴇ ᴛʜᴀᴛ ᴍᴀɴ ᴡɪᴛʜ ᴛʜᴇ ᴜɢʟʏ sᴄᴀʀs?... Hᴇ ғᴏᴜɢʜᴛ ғᴏʀ Spongebob Vlone. -Tʜᴀᴛ ɢᴜʏ ʏOᴜ ᴊᴜsᴛ ᴍᴀᴅᴇ ғᴜɴ ᴏғ ғᴏʀ ᴄʀʏɪɴɢ?... Hɪs ᴍᴏᴛʜᴇʀ ɪs Spongebob Vlone. -Tʜᴀᴛ ᴋɪᴅ ʏᴏᴜ ᴊᴜsᴛ ᴍᴀᴅᴇ ғᴜɴ ᴏғ ғᴏʀ ʙᴇɪɴɢ ʙᴀʟᴅ?...Hᴇ ʜᴀs Spongebob Vlone. ʏᴏᴜʀ sᴛᴀᴛᴜs ɪғ ʏᴏᴜʀ Spongebob Vlone. I ʙᴇᴛ ᴍᴏsᴛ ᴏғ ʏᴏᴜ ᴡᴏɴᴛ ʀᴇ-ᴘᴏsᴛ, ʙᴜᴛ I'ᴍ sᴜʀᴇ ᴛʜᴇ ᴘᴇᴏᴘʟᴇ ᴡɪᴛʜ Spongebob Vlone ᴡɪʟʟ </p>
         <p>enjoy your time in my contribution to the world wide web</p>
         <marquee style="margin: 30px">
           <a href="/pages/freemoney.html">click here for free money</a>
-        </marquee>
-   <audio src="https://files.catbox.moe/tsm81f.mp3" autoplay loop></audio>
-        <!-- 
+        </marquee>        <!-- 
       the part of the marquee of a bunch of buttons of other sites and alt text 
       you can skip this part of the code its kinda messy
       -->
         <marquee>
           <img
-            src="/images/join_logo.gif"
-            alt="a 88x31 button with a cat sitting in the left and text to the right side saying: miaow"
-          />
-          <img
             src="/images/brolove.gif"
-            alt="a 88x31 button with a drawing of two men kissing in the left with in the right saying: it's okay to give your bros some love"
+            alt="its okay to give your bros some love"
           />
-          <a href="https://arandomsite.neocities.org/" target="_blank"
-            ><img
-              src="https://arandomsite.neocities.org/IMG/buttons/88x31.gif"
-              alt="a button that redirects you to a site named a random site"
-          /></a>
           <img
             src="/images/catscape2.gif"
-            alt="a 88x31 button with a cat looking to the right while in the netscape logo background and shooting stars in the left, with the right saying: catscape, meow!"
+            alt="catscape"
           />
           <a href="https://bonkiscoolsite.neocities.org" target="_blank"
             ><img
@@ -180,9 +96,11 @@ authen's website. very cool!
           <a href="https://ikaroll.neocities.org/" target="_blank"
             ><img
               src="/images/ikav2button.gif"
+              alt="ikaroll"
           /></a>
           <a href="https://zj.neocities.org" target="_blank"
             ><img src="https://zj.neocities.org/gifs/zj's%20pingu%20button.png"
+            alt="zj"
           /></a>
           <a href="https://unsaved.info" target="_blank"
             ><img
@@ -208,127 +126,71 @@ authen's website. very cool!
               src="/images/quinn.png"
               alt="a button that redirects you to quinn's site"
               width="88"
-              height="31"
-          /></a>
-          <a href="https://rarejawn.carrd.co" target="_blank"
-            ><img
-              src="/images/rarejawn.png"
-              alt="a button that redirects you to rarejawnn/melancholia blue's site"
-              width="88"
-              height="31"
-          /></a>
-          <a href="https://gratifier.neocities.org/" target="_blank"
-            ><img
-              src="/images/gratifier.png"
-              alt="a button that redirects you to gratifier's site"
-              width="88"
-              height="31"
-          /></a>
-          <a href="http://kidhypno.com/" target="_blank"
-            ><img
-              src="/images/kidhypno.png"
-              alt="a button that redirects you to kidhypno's site"
-              width="88"
-              height="31"
-          /></a>
-          <img
-            src="/images/neovim.gif"
-            alt="A button with the Neovim logo to the left with the right saying: Made with Neovim"
-          />
-          <a href="https://spacy.neocities.org/" target="_blank"
-            ><img
-              src="/images/spacy.png"
-              alt="a button that redirects you to spacy's site"
-              width="88"
-              height="31"
-          /></a>
-          <a href="https://ioletsgo.gay/" target="_blank"
-            ><img
-              src="/images/ivorybutton.gif"
-              alt="a button that redirects you to ivory's site"
-              width="88"
-              height="31"
-          /></a>
-          <a href="https://scoutsite.neocities.org/" target="_blank"
-            ><img
-              src="/images/glitched.gif"
-              alt="a button that redirects you to scout's site"
-              width="88"
-              height="31"
-          /></a>
-          <a href="https://foreverliketh.is" target="_blank"
-            ><img
-              src="/images/foreverliketh.is.png"
-              alt="a button that redirects you to foreverliketh.is"
-              width="88"
-              height="31"
-          /></a>
+              height="31"/>
+              </a>
           <a href="https://boxy.neocities.org/" target="_blank"
             ><picture
               ><source
                 srcset="https://boxy.neocities.org/images/ggWebp.webp"
-                type="image/webp" />
-              <img src="https://boxy.neocities.org/images/ggPng.png" /></picture
+                type="image/webp"
+                alt="boxy"/>
+              <img src="https://boxy.neocities.org/images/ggPng.png" alt="boxy"/></picture
           ></a>
           <img
             src="/images/midi_files_now.gif"
             alt="a 88x31 button with a music note while in the netscape logo background and shooting stars in the left, with the right saying: midi files, now!"
           />
-          <img
-            src="/images/tf.gif"
-            alt="cover art of twin fantasy by car seat headrest on the left with the right animated text saying 'music for the gays'"
-          />
           <a href="https://garf.neocities.org/"
             ><img src="https://garf.neocities.org/garf.gif"
           /></a>
-          <a href="https://idkimjustadog.neocities.org/" target="_blank"
-            ><img
-              src="/images/ellietime.png"
-              alt="ellie"
+          <img
+              src="/images/blackfacts.gif"
+              alt="black facts now!"
               width="88"
               height="31"
-          /></a>
-          <a href="https://houl.floof.company/" target="_blank"
-            ><img
-              src="/images/button.png"
-              alt="houl"
+          />
+         <img
+              src="/images/reddit.gif"
+              alt="reddit"
               width="88"
               height="31"
-          /></a>
+          />
+          <a href="https://karebu.gay" target="_blank">
+          <img width="88" height="31" style="image-rendering:pixelated" src="https://karebu.gay/badge.png">
+          </a>
+          <a href="https://fsky.io" target="_blank">
+          <img width="88" height="31" style="image-rendering:pixelated" src="https://fsky.io/assets/img/badge.png">
+          </a>
         </marquee>
         <!-- button thing -->
         <p style="margin: 40px">use my button</p>
         <p style="margin-left: 5px">
-          <a href="https://authen.neocities.org"
+          <a href="https://authenyo.xyz"
             ><img src="/images/button.gif"
+            alt="authen"
           /></a>
         </p>
-
+        <img src="/images/money.webp" alt="god bless the usa" width="200" height="200" /></p>
         <p>
           <a href="https://www.last.fm/user/pixeIbath"
             ><img
               src="https://lastfm-recently-played.vercel.app/api?user=pixeIbath"
               height="auto"
               width="350px"
+              alt="my recently played songs"
           /></a>
         </p>
-        <p style="margin: 0.7763975155279503vh">
-          <img src="/images/bar-cat.gif" />
-        </p>
+        <p>
+  
       </div>
       <!--- lil part with all the pages -->
-      <div class="item2" style="order: 2; height: 1300px">
+      <div class="item2" style="order: 2; height: 1400px">
         <div class="borderthing" style="width: 97%">
           <p>pages</p>
         </div>
         <p><a href="/pages/happiness.html">home</a></p>
         <p><a href="/pages/aboutme.html">about me</a></p>
         <p><a href="/pages/links.html">links</a></p>
-        <p>
-          <a href="https://authen.123guestbook.com/#" target="_blank"
-            >guestbook</a
-          >
-        </p>
         <p><a href="/blog/index.html">blog</a></p>
         <p><a href="/pages/gallery.html">gallery</a></p>
         <p><a href="/pages/coolmusic.html">cool music</a></p>
@@ -337,9 +199,10 @@ authen's website. very cool!
             >git repo</a
           >
         </p>
-        <p><a href="/pages/music.html">my music</a></p>
-
-        <!--- the POLLS. this part is extremely messy i dont know why pollcode does it like that. but it works and i like it. -->
+        <p><a href="/pages/givememoney.html">donate</a></p>
+        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
+        <p><a href="/pages/services.html">services</a></p>
+        <!--- the POLLS. this part is extremely messy i dont know why pollcode does it like that. but it works and i like it. update: its longer messy prettier fixed it -->
         <div class="borderthing" style="width: 97%">
           <p>polls</p>
         </div>
@@ -477,7 +340,7 @@ authen's website. very cool!
           <a href="https://hotlinewebring.club/authen/next"> &rarr;</a>
         </p>
         <div class="borderthing" style="width: 97%">
-          <p>john john john</p>
+          <p>ads</p>
         </div>
         <iframe
           src="https://john.citrons.xyz/embed?ref=authenyo.xyz"
@@ -491,10 +354,7 @@ authen's website. very cool!
             border: none;
           "
         ></iframe>
-      <div class="borderthing" style="width: 97%">
-      <p>status</p>
-      </div>
-      <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=authenyo" defer></script>
+        <iframe width="300" height="250" style="border:none" src="https://googol.neocities.org/neolink/embed.html" name="neolink"></iframe>
     </div>
     </div>
   </body>
