--- a/pages/ipgrabber.html
+++ b/pages/ipgrabber.html
@@ -24,6 +24,7 @@
          This makes it easier to make new pages for your site. -->
     <link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
     <meta name="”robots”" content="”noai," noimageai” />
+    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
   </head>
   <body>
     <p style="text-align: center">
