navbar/whatever now doesnt need to be updated for every page

--- a/pages/links.html
+++ b/pages/links.html
@@ -20,7 +20,6 @@
    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
   </head>
   <body>
-    <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -46,25 +45,14 @@
           <p>if u saw me somewhere else no u didnt</p>
       </div>
 
-      <div class="item2" style="height: 900px">
-        <div class="borderthing" style="width: 97%">
-          <p>pages</p>
-        </div>
-        <p><a href="/pages/happiness.html">home</a></p>
-        <p><a href="/pages/aboutme.html">about me</a></p>
-        <p><a href="/pages/links.html">links</a></p>
-        <p><a href="/blog/index.html">blog</a></p>
-        <p><a href="/pages/gallery.html">gallery</a></p>
-        <p><a href="/pages/coolmusic.html">cool music</a></p>
-        <p>
-          <a href="https://git.gay/authenyo/website" target="_blank"
-            >git repo</a
-          >
-        </p>
-        <p><a href="/pages/givememoney.html">donate</a></p>
-        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
-        <p><a href="/pages/services.html">services</a></p>
-      </div>
-    </div>
+<div id="navbar-container"></div>
+    <script>
+fetch('/navbar.html')
+  .then(response => response.text())
+  .then(data => {
+    document.getElementById('navbar-container').innerHTML = data;
+  })
+  .catch(error => console.error('Error loading navbar:', error));
+</script>
   </body>
 </html>
