--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -74,7 +74,6 @@
     new fairyDustCursor();
   </script>
   <body>
-    <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -94,25 +93,14 @@ The Woken Mind is a concept that is often used toAncient Greek Symbolism Resembl
         <p>im iris and i love u</p>
         <img src="/images/worldisa.png" alt="born to die world is a fuck kill em all 1989 this user is trash man 410,757,864,530 dead cops">
       </div>
-      <div class="item2" style="height: 1800px">
-        <div class="borderthing" style="width: 97%">
-          <p>pages</p>
-        </div>
-        <p><a href="/pages/happiness.html">home</a></p>
-        <p><a href="/pages/aboutme.html">about me</a></p>
-        <p><a href="/pages/links.html">links</a></p>
-        <p><a href="/blog/index.html">blog</a></p>
-        <p><a href="/pages/gallery.html">gallery</a></p>
-        <p><a href="/pages/coolmusic.html">cool music</a></p>
-        <p>
-          <a href="https://git.gay/authenyo/website" target="_blank"
-            >git repo</a
-          >
-        </p>
-        <p><a href="/pages/givememoney.html">donate</a></p>
-        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
-        <p><a href="/pages/services.html">services</a></p>
-      </div>
-    </div>
+<div id="navbar-container"></div>
+    <script>
+fetch('/navbar.html')
+  .then(response => response.text())
+  .then(data => {
+    document.getElementById('navbar-container').innerHTML = data;
+  })
+  .catch(error => console.error('Error loading navbar:', error));
+</script>
   </body>
 </html>
