--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -77,8 +77,6 @@
 
       new fairyDustCursor();
     </script>
-    <!--- basic flexbox stuff -->
-    <div class="flex" style="flex-wrap: wrap">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -204,25 +202,14 @@
         <marquee><img src="/images/gallery/3dgifmaker11702.gif" /></marquee>
       </div>
       <!--- lil part with all the pages -->
-      <div class="item2" style="order: 2; height: 310.55900621118013vh">
-        <div class="borderthing" style="width: 97%">
-          <p>pages</p>
-        </div>
-        <p><a href="/pages/happiness.html">home</a></p>
-        <p><a href="/pages/aboutme.html">about me</a></p>
-        <p><a href="/pages/links.html">links</a></p>
-        <p><a href="/blog/index.html">blog</a></p>
-        <p><a href="/pages/gallery.html">gallery</a></p>
-        <p><a href="/pages/coolmusic.html">cool music</a></p>
-        <p>
-          <a href="https://git.gay/authenyo/website" target="_blank"
-            >git repo</a
-          >
-        </p>
-        <p><a href="/pages/givememoney.html">donate</a></p>
-        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
-        <p><a href="/pages/services.html">services</a></p>
-      </div>
-    </div>
+<div id="navbar-container"></div>
+    <script>
+fetch('/navbar.html')
+  .then(response => response.text())
+  .then(data => {
+    document.getElementById('navbar-container').innerHTML = data;
+  })
+  .catch(error => console.error('Error loading navbar:', error));
+</script>
   </body>
 </html>
