--- a/pages/services.html
+++ b/pages/services.html
@@ -64,7 +64,6 @@
 
       new fairyDustCursor();
     </script>
-    <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -81,28 +80,17 @@ i host a few services on this domain and heres a list of them
 <p><a href="https://relay.authenyo.xyz">activitypub relay</a></p>
 <p><a href="https://4get.authenyo.xyz">4get (search engine)</a></p>
 <p><a href="https://stream.authenyo.xyz">owncast</a></p>
-
+<p><a href="https://pleroma.brainworm.homes">pleroma (fediverse/social media) (domain on amy's freedns thing, thanks)</a></p>
       </div>
 
-      <div class="item2">
-        <div class="borderthing" style="width: 97%">
-          <p>pages</p>
-        </div>
-        <p><a href="/pages/happiness.html">home</a></p>
-        <p><a href="/pages/aboutme.html">about me</a></p>
-        <p><a href="/pages/links.html">links</a></p>
-        <p><a href="/blog/index.html">blog</a></p>
-        <p><a href="/pages/gallery.html">gallery</a></p>
-        <p><a href="/pages/coolmusic.html">cool music</a></p>
-        <p>
-          <a href="https://git.gay/authenyo/website" target="_blank"
-            >git repo</a
-          >
-        </p>
-        <p><a href="/pages/givememoney.html">donate</a></p>
-        <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
-        <p><a href="/pages/services.html">services</a></p>
-      </div>
-    </div>
+<div id="navbar-container"></div>
+    <script>
+fetch('/navbar.html')
+  .then(response => response.text())
+  .then(data => {
+    document.getElementById('navbar-container').innerHTML = data;
+  })
+  .catch(error => console.error('Error loading navbar:', error));
+</script>
   </body>
 </html>
