--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -67,6 +67,7 @@
       }
       // ]]>
     </script>
+    <script defer src="/style.js"></script>
   </head>
   <script type="module">
     import { fairyDustCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
