--- a/pages/evilshop.html
+++ b/pages/evilshop.html
@@ -67,6 +67,7 @@
       }
       // ]]>
     </script>
+    <script defer src="/style.js"></script>
   </head>
   <body>
     <script type="module">
