--- a/pages/freemoney.html
+++ b/pages/freemoney.html
@@ -57,6 +57,7 @@
       }
       // ]]>
     </script>
+    <script defer src="/style.js"></script>
   </head>
   <body>
     <script type="module">
