--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -69,6 +69,7 @@
       }
       // ]]>
     </script>
+    <script defer src="/style.js"></script>
   </head>
   <body>
     <!-- script tag for the mouse effects 2 -->
