--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -52,10 +52,9 @@ authen's website. very cool!
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#33FFFF" data-react-helmet="true" name="theme-color" />
     <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
-  
+    <script defer src="/style.js"></script>
   </head>
   <body>
-
     <!--- basic flexbox stuff -->
       <div class="header">
         <marquee>
