--- a/pages/links.html
+++ b/pages/links.html
@@ -18,6 +18,7 @@
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
     <meta name="”robots”" content="”noai," noimageai” />
    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
+       <script defer src="/style.js"></script>
   </head>
   <body>
       <div class="header">
