--- a/pages/coolmusic.html
+++ b/pages/coolmusic.html
@@ -65,6 +65,7 @@
       }
       // ]]>
     </script>
+    <script defer src="/style.js"></script>
   </head>
   <body>
     <script type="module">
