--- a/pages/givememoney.html
+++ b/pages/givememoney.html
@@ -73,7 +73,7 @@
       <div class="item" style="overflow-wrap: break-word;">
        <h1>donate</h1>
        <p>if you fw me heavily... or like me website... you can like .. give me money,,, im not like starving but im broke help a brotha out</p>
-       <p><a href="https://ko-fi.com/authenyo">ko-fi</a></p>
+       <p><a href="https://ko-fi.com/weedpenisgirlsuckler420">ko-fi</a></p>
        <p><a href="https://liberapay.com/authenyo">liberapay</a></p>
        <p>monero:<code>44Jt22rEvh8MpBrJjEXhLu2eWaXpZaXWDX15DhAVgRTDTWKStnmtE1PPxsAxocRq7gH85pS3ZPLVM5nW8oW5m47BDM42p3y</code></p>
        <p>btc: bc1qwns2qrj4lf53qwsnfjp7ldu6ygeh4za7p6lt7a</p>
