--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -149,7 +149,7 @@ authen's website. very cool!
           <img width="88" height="31" style="image-rendering:pixelated" src="https://karebu.gay/badge.png">
           </a>
           <a href="https://fsky.io" target="_blank">
-          <img width="88" height="31" style="image-rendering:pixelated" src="https://fsky.io/assets/img/badge.png">
+          <img width="88" height="31" style="image-rendering:pixelated" src="/images/badge.png">
           </a>
           <a href="https://autumn.town" target="_blank">
           <img width="88" height="31" src="/images/New Project(2).gif" style="image-rendering:pixelated" >
@@ -181,7 +181,13 @@ authen's website. very cool!
   <img src="https://rinici.de/button.png">
 </a>
           <a href="https://zayd.fsky.io">
-  <img src="https://zayd.fsky.io/assets/images/badges/mine/zayd-v1.png">
+  <img src="/images/zayd.png">
+</a>
+          <a href="https://ratmaxx.ing">
+  <img src="/images/ratmaxxing.webp">
+</a>
+          <a href="https://www.slsknet.org">
+  <img src="/images/soulseek.webp">
 </a>
 <a href="https://redcatho.de"><picture>
     <source srcset="https://redcatho.de/buttons/red.webp" type="image/webp">
