--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -212,5 +212,6 @@ fetch('/navbar.html')
   })
   .catch(error => console.error('Error loading navbar:', error));
 </script>
+<script src="/player.js"></script>
   </body>
 </html>
