--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -103,5 +103,6 @@ fetch('/navbar.html')
   })
   .catch(error => console.error('Error loading navbar:', error));
 </script>
+<script src="/player.js"></script>
   </body>
 </html>
