--- a/pages/coolmusic.html
+++ b/pages/coolmusic.html
@@ -92,5 +92,6 @@ fetch('/navbar.html')
   })
   .catch(error => console.error('Error loading navbar:', error));
 </script>
+<script src="/player.js"></script>
   </body>
 </html>
