--- a/pages/evilshop.html
+++ b/pages/evilshop.html
@@ -111,5 +111,6 @@ fetch('/navbar.html')
   })
   .catch(error => console.error('Error loading navbar:', error));
 </script>
-  </body>
+<script src="/player.js"></script>
+</body>
 </html>
