--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -195,6 +195,7 @@ authen's website. very cool!
 </picture></a>
 <a href="https://twelvemen.neocities.org/index.html"><img src="https://twelvemen.neocities.org/12men.gif"></a>
 <a href="https://detondev.com"><img src="/images/detondev.gif"></a>
+<a href="https://purplebored.pl"><img src="/images/Purplebored_button.png"></a>
         <!-- button thing -->
         <p style="margin: 40px">use my button (hotlink!)</p>
         <p style="margin-left: 5px">
@@ -226,5 +227,6 @@ fetch('/navbar2.html')
   })
   .catch(error => console.error('Error loading navbar:', error));
 </script>
+<script src="/player.js"></script>
   </body>
 </html>
