--- a/pages/links.html
+++ b/pages/links.html
@@ -55,5 +55,6 @@ fetch('/navbar.html')
   })
   .catch(error => console.error('Error loading navbar:', error));
 </script>
+<script src="/player.js"></script>
   </body>
 </html>
