--- a/pages/services.html
+++ b/pages/services.html
@@ -81,7 +81,6 @@ i host a few services on this domain and heres a list of them
 <p><a href="https://relay.authenyo.xyz">activitypub relay</a></p>
 <p><a href="https://4get.authenyo.xyz">4get (search engine)</a></p>
 <p><a href="https://stream.authenyo.xyz">owncast</a></p>
-<p><a href="https://pleroma.brainworm.homes">pleroma (fediverse/social media) (domain on amy's freedns thing, thanks)</a></p>
       </div>
 
 <div id="navbar-container"></div>
@@ -93,5 +92,6 @@ fetch('/navbar.html')
   })
   .catch(error => console.error('Error loading navbar:', error));
 </script>
+<script src="/player.js"></script>
   </body>
 </html>
