--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -75,6 +75,7 @@
     new fairyDustCursor();
   </script>
   <body>
+    <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -95,6 +96,7 @@ The Woken Mind is a concept that is often used toAncient Greek Symbolism Resembl
         <img src="/images/worldisa.png" alt="born to die world is a fuck kill em all 1989 this user is trash man 410,757,864,530 dead cops">
       </div>
 <div id="navbar-container"></div>
+</div>
     <script>
 fetch('/navbar.html')
   .then(response => response.text())
