--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -78,6 +78,7 @@
 
       new fairyDustCursor();
     </script>
+        <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -204,6 +205,7 @@
       </div>
       <!--- lil part with all the pages -->
 <div id="navbar-container"></div>
+</div>
     <script>
 fetch('/navbar.html')
   .then(response => response.text())
