--- a/pages/coolmusic.html
+++ b/pages/coolmusic.html
@@ -73,6 +73,7 @@
 
       new fairyDustCursor();
     </script>
+        <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -84,6 +85,7 @@
       </div>
 
 <div id="navbar-container"></div>
+</div>
     <script>
 fetch('/navbar.html')
   .then(response => response.text())
