--- a/pages/evilshop.html
+++ b/pages/evilshop.html
@@ -75,6 +75,7 @@
 
       new fairyDustCursor();
     </script>
+        <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -103,6 +104,7 @@
       </div>
 
 <div id="navbar-container"></div>
+</div>
     <script>
 fetch('/navbar.html')
   .then(response => response.text())
