--- a/pages/givememoney.html
+++ b/pages/givememoney.html
@@ -65,12 +65,13 @@
 
       new fairyDustCursor();
     </script>
+    <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
         </marquee>
       </div>
-      <div class="item" style="overflow-wrap: break-word;">
+      <div class="item" style="overflow-wrap: break-word; height: 1400px;">
        <h1>donate</h1>
        <p>if you fw me heavily... or like me website... you can like .. give me money,,, im not like starving but im broke help a brotha out</p>
        <p><a href="https://ko-fi.com/authenyo">ko-fi</a></p>
@@ -83,6 +84,7 @@
        <p>ethereum: 0x07fC9c555b6C7f9C39CFF9E87f4037bdf981dd11</p>
 </div>
 <div id="navbar-container"></div>
+</div>
     <script>
 fetch('/navbar.html')
   .then(response => response.text())
