--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -56,6 +56,7 @@ authen's website. very cool!
   </head>
   <body>
     <!--- basic flexbox stuff -->
+    <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
@@ -219,6 +220,7 @@ authen's website. very cool!
       </div>
       <!--- lil part with all the pages -->
 <div id="navbar-container"></div>
+</div>
     <script>
 fetch('/navbar2.html')
   .then(response => response.text())
