--- a/pages/services.html
+++ b/pages/services.html
@@ -65,12 +65,13 @@
 
       new fairyDustCursor();
     </script>
+        <div class="flex">
       <div class="header">
         <marquee>
           <div id="wobble">authen</div>
         </marquee>
       </div>
-      <div class="item">
+      <div class="item" style="height: 1400px;">
       <h1>services</h1>
         <p>
 i host a few services on this domain and heres a list of them
@@ -84,6 +85,7 @@ i host a few services on this domain and heres a list of them
       </div>
 
 <div id="navbar-container"></div>
+</div>
     <script>
 fetch('/navbar.html')
   .then(response => response.text())
