--- a/pages/services.html
+++ b/pages/services.html
@@ -82,6 +82,7 @@ i host a few services on this domain and heres a list of them
 <p><a href="https://relay.authenyo.xyz">activitypub relay</a></p>
 <p><a href="https://4get.authenyo.xyz">4get (search engine)</a></p>
 <p><a href="https://stream.authenyo.xyz">owncast</a></p>
+<p><a href="http://irisyn4yzwsu6cvcuv67uufivznewgro6iwfwvz4xo57ksdzpe2gqzad.onion">authenyo.xyz tor mirror</a></p>
       </div>
 
 <div id="navbar-container"></div>
